--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             
             <div class="input-group">
-                <label for="dob">Date of Birth : </label>
+                <label for="dob">OWNED DATE: </label>
                 <input type="date" id="dob">
             </div>
             
@@ -100,4 +100,5 @@
 
 </body>
 </html>
+
 
